--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,10 @@ nav a:hover {
   text-decoration: underline;
 }
 
+nav a.active {
+  text-decoration: underline;
+}
+
 #projects {
   margin-top: 20px;
 }
